--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -124,7 +124,6 @@
   month = jan,
   journal = {World Development},
   volume = {149},
-  pages = {105691},
   issn = {0305-750X},
   doi = {10.1016/j.worlddev.2021.105691},
   url = {https://www.sciencedirect.com/science/article/pii/S0305750X21003065}
@@ -183,11 +182,11 @@
   url = {https://wir2022.wid.world/www-site/uploads/2023/03/D\_FINAL\_WIL\_RIM\_RAPPORT\_2303.pdf}
 }
 
-@article{chandy_final_2013,
+@misc{chandy_final_2013,
   title = {The {{Final Countdown}}: {{Prospects}} for {{Ending Extreme Poverty}} by 2030},
   author = {Chandy, Laurence and Ledlie, Natasha and Penciakova, Veronika},
   year = {2013},
-  journal = {Brookings}
+  publisher = {Brookings}
 }
 
 @article{chen_developing_2010,
@@ -321,6 +320,20 @@
   url = {https://www.jstor.org/stable/4017680}
 }
 
+@article{egger_general_2022,
+  title = {General {{Equilibrium Effects}} of {{Cash Transfers}}: {{Experimental Evidence From Kenya}}},
+  shorttitle = {General {{Equilibrium Effects}} of {{Cash Transfers}}},
+  author = {Egger, Dennis and Haushofer, Johannes and Miguel, Edward and Niehaus, Paul and Walker, Michael},
+  year = {2022},
+  journal = {Econometrica},
+  volume = {90},
+  number = {6},
+  pages = {2603--2643},
+  issn = {1468-0262},
+  doi = {10.3982/ECTA17945},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.3982/ECTA17945}
+}
+
 @article{fabre_international_2023,
   title = {International {{Attitudes Toward Global Policies}}},
   author = {Fabre, Adrien and Douenne, Thomas and Mattauch, Linus},
@@ -374,6 +387,18 @@
   institution = {UNU-WIDER},
   doi = {10.35188/UNU-WIDER/WTN/2021-4},
   url = {https://www.wider.unu.edu/node/238513}
+}
+
+@article{haushofer_short-term_2016,
+  title = {The {{Short-term Impact}} of {{Unconditional Cash Transfers}} to the {{Poor}}: {{Experimental Evidence}} from {{Kenya}}},
+  shorttitle = {The {{Short-term Impact}} of {{Unconditional Cash Transfers}} to the {{Poor}}},
+  author = {Haushofer, Johannes and Shapiro, Jeremy},
+  year = {2016},
+  journal = {The Quarterly Journal of Economics},
+  volume = {131},
+  number = {4},
+  pages = {1973--2042},
+  url = {https://econpapers.repec.org/article/oupqjecon/v\_3a131\_3ay\_3a2016\_3ai\_3a4\_3ap\_3a1973-2042..htm}
 }
 
 @article{hellebrandt_future_2015,
@@ -484,7 +509,6 @@
   month = nov,
   journal = {World Development},
   volume = {123},
-  pages = {104593},
   issn = {0305-750X},
   doi = {10.1016/j.worlddev.2019.06.017},
   url = {https://www.sciencedirect.com/science/article/pii/S0305750X1930169X}
@@ -534,7 +558,7 @@
   journal = {Environmental Research Letters},
   volume = {16},
   number = {9},
-  pages = {095006},
+  pages = {1--11},
   publisher = {IOP Publishing},
   issn = {1748-9326},
   doi = {10.1088/1748-9326/ac1c27},
@@ -689,7 +713,7 @@
   month = may,
   journal = {World Development},
   volume = {177},
-  pages = {106516},
+  number = {106516},
   issn = {0305750X},
   doi = {10.1016/j.worlddev.2023.106516},
   url = {https://linkinghub.elsevier.com/retrieve/pii/S0305750X23003340}
@@ -704,6 +728,7 @@
   journal = {Journal of Globalization and Development},
   volume = {7},
   number = {2},
+  pages = {1--28},
   publisher = {De Gruyter},
   issn = {1948-1837},
   doi = {10.1515/jgd-2016-0033},
@@ -743,10 +768,23 @@
   month = mar,
   journal = {World Development},
   volume = {127},
-  pages = {104749},
+  number = {104749},
   issn = {0305-750X},
   doi = {10.1016/j.worlddev.2019.104749},
   url = {https://www.sciencedirect.com/science/article/pii/S0305750X19303985}
+}
+
+@article{muralidharan_identity_2023,
+  title = {Identity {{Verification Standards}} in {{Welfare Programs}}: {{Experimental Evidence}} from {{India}}},
+  shorttitle = {Identity {{Verification Standards}} in {{Welfare Programs}}},
+  author = {Muralidharan, Karthik and Niehaus, Paul and Sukhtankar, Sandip},
+  year = {2023},
+  month = feb,
+  journal = {The Review of Economics and Statistics},
+  pages = {1--46},
+  issn = {0034-6535},
+  doi = {10.1162/rest_a_01296},
+  url = {https://doi.org/10.1162/rest\_a\_01296}
 }
 
 @misc{ncube_can_2014,
@@ -1047,6 +1085,32 @@
   year = {2010},
   institution = {new economics foundation},
   url = {https://neweconomics.org/uploads/files/RBPLTechPub.pdf}
+}
+
+@techreport{world_bank_benin_2020,
+  title = {Benin, {{Burkina-Faso}}, {{Togo}} and {{Niger}} - {{Second Phase}} of {{West Africa Unique Identification}} for {{Regional Integration}} and {{Inclusion WURI Project}}.Pdf},
+  author = {World Bank},
+  year = {2020},
+  institution = {World Bank},
+  url = {https://documents1.worldbank.org/curated/en/261151588384951057/pdf/Benin-Burkina-Faso-Togo-and-Niger-Second-Phase-of-West-Africa-Unique-Identification-for-Regional-Integration-and-Inclusion-WURI-Project.pdf}
+}
+
+@techreport{world_bank_identification_2022,
+  type = {Text/{{HTML}}},
+  title = {Identification for {{Development}} ({{ID4D}}) and {{Digitalizing G2P Payments}} ({{G2Px}}) 2022 {{Annual Report}}},
+  author = {World Bank},
+  year = {2022},
+  institution = {World Bank},
+  url = {https://documents.worldbank.org/en/publication/documents-reports/documentdetail/099437402012317995/IDU00fd54093061a70475b0a3b50dd7e6cdfe147}
+}
+
+@techreport{world_bank_state_2017,
+  type = {Text/{{HTML}}},
+  title = {The {{State}} of Identification Systems in {{Africa}} -- a Synthesis of Country Assessments},
+  author = {World Bank},
+  year = {2017},
+  institution = {World Bank},
+  url = {https://documents.worldbank.org/en/publication/documents-reports/documentdetail/156111493234231522/The-State-of-identification-systems-in-Africa-a-synthesis-of-country-assessments}
 }
 
 @misc{world_bank_world_2022,
