--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -222,8 +222,9 @@
 
 % \begin{small} % NCCcomment
 \begin{abstract}
-% 144/150 words
-In 2015, the Sustainable Development Goals set the eradication of extreme poverty by 2030 as a universally agreed objective. This paper analyses the prospects for achieving this goal country by country. Without a reduction in inequality, even with a very optimistic annual growth rate of 7\% between 2022 and 2030, 3\% of humans would still be living in extreme poverty in 2030. National capacity to eradicate poverty is then measured using the concepts of \textit{antipoverty cap} or \textit{antipoverty tax} required to finance poverty eradication, and \textit{income floor} (financed by a given income tax). With credible annual growth of 3\%, even capping incomes at \$7 a day cannot eradicate extreme poverty in 5 low-income countries. In other words, neither growth alone nor growth combined with radical domestic redistribution could eradicate extreme poverty by 2030. By contrast, a transfer of just 0.14\% of global income could achieve this goal.
+% 151/200 words
+In 2015, the Sustainable Development Goals set the eradication of extreme poverty by 2030 as a universally agreed objective. This paper analyses the prospects for achieving this goal country by country. Without a reduction in inequality, even with a very optimistic annual growth rate of 7\% between 2022 and 2030, 3\% of humans would still be living in extreme poverty in 2030. National capacity to eradicate poverty is then measured using the concepts of \textit{antipoverty cap} or \textit{antipoverty tax} required to finance poverty eradication, and \textit{income floor} (financed by a given income tax). With credible annual growth of 3\%, even capping incomes at \$7 a day (to finance an increase in incomes for the poorest individuals) cannot eradicate extreme poverty in 5 low-income countries. In other words, neither growth alone nor growth combined with radical domestic redistribution could eradicate extreme poverty by 2030. By contrast, a transfer of just 0.15\% of global income could achieve this goal. This could be financed by a 2\% tax on individual net wealth above \$1 billion.
+
 \end{abstract}
 % In 2015, the Sustainable Development Goals set the eradication of extreme poverty by 2030 as a universally agreed objective. This paper analyses the prospects for achieving this goal country by country. Without redistribution, even with a very optimistic annual growth rate of 7% between 2022 and 2030, 3% of humans would still be living in extreme poverty in 2030. National capacity to eradicate poverty is then measured using the concepts of antipoverty cap or antipoverty tax required to finance poverty eradication, and income floor (financed by a given income tax). With credible annual growth of 3%, even capping incomes at $7 a day cannot eradicate extreme poverty in 5 low-income countries. In other words, neither growth alone nor growth combined with radical domestic redistribution could eradicate extreme poverty by 2030. By contrast, a transfer of just 0.14% of global income could achieve this goal.
 
@@ -242,8 +243,10 @@ In 2015, the Sustainable Development Goals set the eradication of extreme povert
 The very first Sustainable Development Goal (SDG) % SDG 1.1
 reads: ``By 2030, eradicate extreme poverty for all people everywhere, currently measured as people living on less than \$2.15 a day''. As we have passed the halfway point since the adoption of the SDGs in 2015, it is time to assess progress towards this universally accepted goal. 
 
-In this paper, I assess whether growth and domestic redistribution are sufficient to eradicate extreme poverty by 2030. I first study the extent of poverty in different growth scenarios. Then, I calculate the magnitude of domestic redistribution required in each country to eradicate poverty in 2030. I mobilize different indicators. I estimate the parameter of two tax policies that would raise enough revenues to eradicate poverty. In the ``antipoverty cap'', I fix the rate (at 100\%) and find the required taxation threshold. In the ``antipoverty tax'', I fix the threshold and find the rate needed. As a last indicator, I fix both the threshold and the rate and compute the income floor that the tax could finance. In the lowest income countries, extreme poverty is estimated to persist even after strong growth and radical redistribution. % add idealized domestic policies to redistribute income. 
+In this paper, I assess whether growth and domestic redistribution are sufficient to eradicate extreme poverty by 2030. I first study the extent of poverty in different growth scenarios. Then, I calculate the magnitude of domestic redistribution required in each country to eradicate poverty in 2030. I mobilize different indicators. For two idealized tax policies, I estimate the parameter that would raise enough revenue to eradicate poverty. In the ``antipoverty cap'', I fix the tax rate at its maximum value of 100\% so that the tax effectively becomes a cap on top incomes, and I find the required cap (or taxation threshold). All income above the cap is assumed to be redistributed to the lowest incomes in order to eradicate poverty. In the ``antipoverty tax'', I fix the taxation threshold and find the tax rate needed to raise the revenue required to eradicate poverty. As a last indicator, I fix both the taxation threshold and the tax rate, and I compute the income floor that the tax could finance (by redistributing tax revenue to the lowest incomes). In the lowest income countries, extreme poverty is estimated to persist even after strong growth and radical redistribution. % add idealized domestic policies to redistribute income. 
 This has implications for the international community, as international solidarity appears necessary to achieve the first SDG. I complete the analysis by exemplifying international transfers that would eradicate poverty by 2030.
+
+To assess the prospects of achieving the first SDG, I explore in turn the effects of balanced growth alone, idealized national redistribution policies, and idealized global redistribution. The thought experiments are not meant to be exhaustive or representative pathways to achieving the first SDG. They are presented to demonstrate that relying on growth and domestic policies alone would fall short of eradicating poverty by 2030. In contrast, global solidarity has the potential to dramatically accelerate poverty eradication.
 
 \paragraph{Literature} 
 % “As things stand, the world is not on track to end poverty by 2030,” (UN, 22)
@@ -256,7 +259,7 @@ The idea to measure the domestic capacity to eradicate poverty with an antipover
 The present paper employs a similar methodology to assess which countries have sufficient domestic resources to achieve the first SDG. There are three reasons why BCL cannot be used % is not designed 
 for that purpose. 
 First, the most recent data was not available to BCL (their most recent survey year is 2012 with most years in 2009--2010, compared to 2018--2021 in the present paper). % shorten: parenthesis
-Second, BCL study the data as it stands rather than imputing growth and using it to infer the income distributions in 2030. Third, they focus on a poverty line higher than the one officially used in the first SDG.
+Second, BCL study the data as it stands rather than adjusting it for growth and using it to infer the income distributions in 2030. Third, they focus on a poverty line higher than the one officially used in the first SDG.
 % Ravallion, Bolch. How I improve upon Bolch. 
 % # compare Bolch with the same survey years as them: not replicated because the data has been revised. They use old data (2014) and old survey years (2009). Using most recent PIP data is surely preferable.
 
@@ -273,10 +276,13 @@ The paper also relates to estimates of future poverty rates based on growth alon
 % Lit on future poverty rate: Karver et al. (12): IMF proj - 1pp, Chandy et al. (13) EIU - 10%, Bicaba et al. (17) EIU - 10%, Lakner et al. (22): Reducing each country’s Gini index by 1% per year has a larger impact on global poverty than increasing each country’s annual growth 1 percentage point above forecasts; on future global income distrib, Hellebrandt & Mauro (15): IMF proj and one sensitivity analysis with 0.84+0.35*(past growth)
 
 The paper is linked to the literature that estimates the global income distribution \citep{pinkovskiy_parametric_2009,anand_chapter_2015,lahoti_global_2016,lakner_global_2016,gradin_trends_2021,jorda_global_2019,alvaredo_methods_2021,milanovic_three_2024}. 
+I follow \cite{lakner_global_2016} by merging income and consumption data without adjustment in the main specification. 
+\cite{anand_chapter_2015} discuss common issues regarding the global income distribution and introduce a method to handle discrepancies between data sources. I follow a similar method as a robustness check, as explained in Section \ref{subsec:data}. 
+% WIID, i.e. LIS when available and PovcalNet otherwise
 % I prefer PIP to alternatives because the GCIP database has been discontinued;\cite{lahoti_global_2016} WIID adjusts its data to GDP (while HFCE is more relevant to us);\cite{gradin_trends_2021} WID has only wide coverage for post-tax national income (diinc) rather than post-tax disposable income (cainc, without public spending).\cite{alvaredo_methods_2021} % TODO? include?
 % Lit on global income distr: Cite GCIP (Lahoti et al., 16), WIID (Gradín, 21) and WID as alternative sources
 % # Cite Lakner & Milanovic (16): on HFCE adjustment, Anand & Segal (15) on estimating global income distribution: "Between-country inequality is the larger component of global inequality, comprising 64–81% of overall inequality"; and Pinkovskiy & Sala-i-Martin (09), Jordá & Niño-Zarazúa (19) on parametric estimates of global distribution. => TODO? cite in some sentences for the HFCE adjustment?
-It also connects with the costing and progress assessment of SDGs and in particular poverty eradication \citep{schmidt-traub_investment_2015,rozenberg_beyond_2019,sdsn_sdg_2019,manuel_financing_2020,vorisek_understanding_2020,unctad_estimating_2021,un_sustainable_2022}. In 24 countries, a growth rate of 7\% would not suffice to eradicate extreme poverty by 2030 \citep{unctad_estimating_2021}. While the global cost of achieving the SDGs may be as high as \$4 trillion per year \citep{unctad_world_2023}, % also oecd_bottlenecks_2023
+The paper also connects with the costing and progress assessment of SDGs and in particular poverty eradication \citep{schmidt-traub_investment_2015,rozenberg_beyond_2019,sdsn_sdg_2019,manuel_financing_2020,vorisek_understanding_2020,unctad_estimating_2021,un_sustainable_2022}. In 24 countries, a growth rate of 7\% would not suffice to eradicate extreme poverty by 2030 \citep{unctad_estimating_2021}. While the global cost of achieving the SDGs may be as high as \$4 trillion per year \citep{unctad_world_2023}, % also oecd_bottlenecks_2023
 % TODO understand what is behind this notion of "financing gap": it seems that UNCTAD has a higher value than SDSN or Kharas
 the financing gap in low- and lower-middle-income countries is estimated at \$400 billion \citep{sdsn_sdg_2019} % LIC+LMIC
 to \$700 billion \citep{kharas_building_2019} % LIC+LMIC Table 4
@@ -284,6 +290,8 @@ per year. With the current trend, the SDGs will not be achieved and only limited
 \cite{manuel_financing_2018} find that low-income countries do not have the resources to afford basic healthcare, education, and social protection; only an increase and a redirection of Official Development Assistance (ODA) can finance these programs. 
 % Lit on costing of extreme poverty eradication: UNCTAD (21, p. 15: growth needed), Vorisek & Yu (20, lite review), SDSN (19, excellent: talk about ODA, wealth & carbon taxes, estimate domestic resources, e.g. Table 4), Moyer & Hedden (20), Manuel et al. (18) (cost to end extreme poverty: 2.5 T$, incl. 150 G$ in countries lacking resources - vs. 200 G$ in ODA)
 % karver_mdgs_2012 chandy_final_2013 bicaba_can_2017 lakner_how_2022 lakner_global_2016 lakner_global_2013 lahoti_global_2016 gradin_trends_2021 anand_chapter_2015 pinkovskiy_parametric_2009 jorda_global_2019 unctad_estimating_2021 vorisek_understanding_2020 sdsn_sdg_2019 moyer_are_2020 manuel_financing_2018
+
+The main contribution of this paper is to provide an explicit assessment of the prospects for achieving the first SDG. While existing studies estimate the poverty reduction that can be achieved through either growth or domestic redistribution, I study the combination of both. I also improve upon existing studies by presenting results in the form of world maps and by providing an open source code to work with global inequality data: \href{https://github.com/bixiou/domestic_poverty_eradication}{github.com/bixiou/domestic\_poverty\_eradication}. This code offers ready-to-use functions to compute all sorts of inequality indicators (Gini, top 10\% share, antipoverty tax rate, etc.) and plot world maps of these indicators.
 
 \section{Data}\label{subsec:data}
 % Important: data source, HFCE, balanced growth
@@ -303,7 +311,7 @@ As a robustness check, I also re-derive the main results after adjusting aggrega
 
 As is common in this literature \citep{karver_mdgs_2012,hellebrandt_future_2015,bicaba_can_2017}, my baseline assumes ``balanced growth'', meaning that each percentile grows at the same rate between the country's survey year and 2030. 
 I rescale incomes by the observed growth of GDP p.c. (in PPP) up to 2022 (using World Bank data) and by different methods for the 2022--2030 period. 
-These methods include: extending the 2014--2019 growth trend (which excludes COVID years); extending the trend for growing countries and assuming no growth when GDP p.c. has contracted between 2014 and 2019; assuming a constant growth (of either 0\%, 3\%, 4.5\%, 6\%, or 7\%); using IMF forecasts (\cite{imf_world_2023} extended up to 2030 by replicating the 2026--2028 forecasted growth in 2028--2030); projecting future growth using an autoregressive quadratic model that predicts the 2011--2019 growth based on the 1991-2011 growth (then applied to 2022--2030 using the 2002--2022 growth). Besides, I deviate from this two-step procedure to assess the original SDGs, 
+These methods include: extending the 2014--2019 country growth trend (which excludes COVID years); extending the trend for growing countries and assuming no growth when GDP p.c. has contracted between 2014 and 2019; assuming a constant growth (of either 0\%, 3\%, 4.5\%, 6\%, or 7\%); using IMF forecasts (\cite{imf_world_2023} extended up to 2030 by replicating the 2026--2028 forecasted growth in 2028--2030); projecting future growth using an autoregressive quadratic model that predicts the 2011--2019 growth based on the 1991-2011 growth (then applied to 2022--2030 using the 2002--2022 growth). Besides, I deviate from this two-step procedure to assess the original SDGs, 
 by assuming a constant growth of 7\% starting in 2015.
 
 \section{Results}
@@ -317,7 +325,7 @@ My estimates of 2022 global poverty rates closely align with the 2019 estimates 
 The poverty gap is the cost that separates people below the poverty line from that line. For example, if 10\% of the population earns 1.65\$/day and 90\% of the population earns more than 2.15\$/day, the extreme poverty gap is $0.1 \cdot (2.15 - 1.65) = 0.05\$/\text{day}$. % shorten
 I estimate the extreme poverty gap at 0.25\% of the world GDP. This is a first approximation of what it would cost to lift everyone out of extreme poverty, defined with the \$2.15/day poverty line. 
 
-Assuming that each country will continue to grow at the same rate as in the recent past, %grow over 2022--2030 at the same rate as over 2014--2019, %a balanced growth for 2022--2030 at the rate observed in the country over 2014--2019, 
+Assuming that each country will continue to grow at the same rate as it did in the recent past, %grow over 2022--2030 at the same rate as over 2014--2019, %a balanced growth for 2022--2030 at the rate observed in the country over 2014--2019, 
 I estimate that 6\% of the world population will live in extreme poverty in 2030. I find very similar estimates using a simple yet realistic model to predict a country's growth (an autoregressive projection based on its growth over the last 20 years). 
 % With a balanced growth at a rate of 3\% in each country, extreme poverty would decline slightly more than in the realistic projections, at 5\%.
 If each country grows by 3\% each year, extreme poverty would decline slightly more than in the realistic projections, at 5\%. 
@@ -336,7 +344,7 @@ First, I ignore any costs associated with raising a tax or transferring money, a
 If it were possible to expropriate top income individuals 
 without reducing their economic activity, capping top incomes to finance an income floor would eliminate poverty at the lowest welfare cost. 
 However, to protect private property and diminish the deterring effect on economic activity, governments would rather tax at a lower rate (than 100\%) and on a broader base (starting at a threshold deemed reasonable). 
-Therefore, both the antipoverty cap and the antipoverty tax can be thought as rough but revealing approximations of the capacity to mobilize domestic resources.
+Therefore, both the antipoverty cap and the antipoverty tax can be thought as rough but revealing approximations of the capacity to mobilize domestic resources. The paper's estimates should not be viewed as causal outcomes of the effects of the idealized policies simulated.
 % To fill the poverty gap at the least welfare cost, the cost should be borne by the wealthiest. Indeed, 
 % If it were possible to expropriate top income individuals without reducing their economic activity, the welfare-maximizing transfer would consist of capping top incomes to finance an income floor. 
 % Although in reality, an income cap would deter (declared) activity, %but abstracting from the distorsive aspect of the policy, 
@@ -349,7 +357,7 @@ Unless otherwise stated, I use the scenario of balanced growth at a rate of 3\%.
 \subsection{Antipoverty caps}
 
 \begin{figure}[!b]
-  \caption[Anti-extreme-poverty cap in 2030 after 3\% growth.]{Income cap eradicating extreme poverty (in \$/day). In this idealized policy, all income above the cap is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. %abstracting away from distorsions and implementation costs. Growth is 3\% over 2022--2030.
+  \caption[Anti-\textit{extreme-poverty} cap in 2030 after 3\% growth.]{Income cap eradicating extreme poverty (in \$/day). In this idealized policy, all income above the cap is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. %abstracting away from distorsions and implementation costs. Growth is 3\% over 2022--2030.
   }\label{fig:antipoverty_cap}
   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
   {../figures/y_expropriated_2_average.pdf}}
@@ -362,13 +370,13 @@ Unless otherwise stated, I use the scenario of balanced growth at a rate of 3\%.
 %  net gain per country 1.2% / 15% tax ab $100/day w & wo HFCE + global revenue raised (% of global GDP) + global floor + global transfer + global Gini
 % Include mean SSA + LIC in Table + result at global level (w)
 % $3.65 p / 'reg' growth
-I estimate the income cap that each country should impose to fill the extreme poverty gap with the expropriated income (Figure \ref{fig:antipoverty_cap}). 
+I estimate the income cap that each country should impose to fill the extreme poverty gap with the expropriated income, i.e. all income above the cap (Figure \ref{fig:antipoverty_cap}). 
 In some low-income countries, even capping incomes at \$7/day would not suffice to raise revenues equal to the extreme poverty gap, despite a steady growth of 3\% per year between 2022 and 2030. 
-In a very optimistic scenario of 7\% growth, the anti-extreme-poverty cap would be \$14/day in the D.R.C. Also, note that there is no indication that the resources of this country are underestimated, as the aggregate consumption from household surveys is greater than HFCE % TODO Household Final Consumption Expenditures (HFCE) \cite{deaton_measuring_2005,prydz_disparities_2022}
+In a very optimistic scenario of 7\% growth, the anti-\textit{extreme-poverty} cap would be \$14/day in the D.R.C. Also, note that there is no indication that the resources of this country are underestimated, as the aggregate consumption from household surveys is greater than HFCE % TODO Household Final Consumption Expenditures (HFCE) \cite{deaton_measuring_2005,prydz_disparities_2022}
 from national accounts for the D.R.C. 
 Besides, the D.R.C. is not the poorest country. 
 In Madagascar, the average consumption would fall short of \$2.15/day in the baseline scenario, at \$2.02/day. This means that even with extreme redistribution, Madagascar does not have the domestic resources needed to eliminate extreme poverty by 2030. 
-To give one last example of the shortfall of resources in the lowest-income countries, the anti-extreme-poverty cap for Burundi in the scenario of 7\% growth would need to be as low as 8.60\$/day. 
+To give one last example of the shortfall of resources in the lowest-income countries, the anti-\textit{extreme-poverty} cap for Burundi in the scenario of 7\% growth would need to be as low as 8.60\$/day. 
 
 In most of the paper, I focus on the definition of extreme poverty employed in the first SDG. However, the \$2.15 threshold has been criticized for inaccurately measuring poverty \citep{woodward_redefining_2010,deaton_price_2010,deaton_purchasing_2011}. % TODO? cite also edward_ethical_2006, pritchett_who_2006
 First, this poverty line %is too low to procure just a healthy diet, it is 
@@ -388,26 +396,25 @@ countries will not be able to eradicate severe poverty with a cap at \$22.36/day
 \subsection{Antipoverty taxes}
 
 \begin{figure}[b!]
-  \caption[Anti-extreme-poverty tax above \$6.85/day in 2030 after 3\% growth.]{Linear tax rate above \$6.85/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
+  \caption[Anti-\textit{extreme-poverty} tax above \$6.85/day in 2030 after 3\% growth.]{Linear tax rate above \$6.85/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
   }\label{fig:antipoverty_tax_7}
   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
   {../figures/antipoverty_2_tax_7_average.pdf}}
 \end{figure}
 
-Figure \ref{fig:antipoverty_tax_7} presents the (additional) tax rate above \$6.85/day required to generate enough revenues to close the domestic extreme poverty gap, in the baseline scenario of 
-3\% growth. The threshold of \$6.85/day is defined by the World Bank as the median national poverty line of upper middle-income countries. It corresponds to an ``acute'' poverty line which can be understood as the consumption level that can sustain a minimally decent life \citep{hickel_is_2019,kikstra_decent_2021}. In contrast, the extreme poverty line of \$2.15/day corresponds to the consumption per capita below which one is undernourished \citep{allen_absolute_2017}. 
+Figure \ref{fig:antipoverty_tax_7} presents the tax rate above \$6.85/day required to generate enough revenues to close the domestic extreme poverty gap, in the baseline scenario of 3\% growth. Note that this hypothetical tax would apply on top of existing taxes. The threshold of \$6.85/day is defined by the World Bank as the median national poverty line of upper middle-income countries. It corresponds to an ``acute'' poverty line which can be understood as the consumption level that can sustain a minimally decent life \citep{hickel_is_2019,kikstra_decent_2021}. In contrast, the extreme poverty line of \$2.15/day corresponds to the consumption per capita below which one is undernourished \citep{allen_absolute_2017}. 
 
 Consistently with the previous findings, taxing income at a 100\% rate above \$6.85/day would not generate enough revenues to eliminate extreme poverty in the five poorest countries. In Nigeria, closing the extreme poverty gap would require taxing the ``non-acutely-poor'' at a marginal rate of 20\%. 
-On average over Sub-Saharan Africa, the anti-extreme-poverty tax would be 49\%, and 70\% in low-income countries (defined by the World Bank as countries with a GNI per capita below \$1,135 per year). Yet, imposing such a large tax burden on any income above just \$6.85/day seems unrealistic. 
+On average over Sub-Saharan Africa, the anti-\textit{extreme-poverty} tax would be 49\%, and 70\% in low-income countries (defined by the World Bank as countries with a GNI per capita below \$1,135 per year). Yet, imposing such a large tax burden on any income above just \$6.85/day seems unrealistic. 
 
 \begin{figure}[b!]
-  \caption[Anti-extreme-poverty tax above \$18.15/day in 2030 after 3\% growth.]{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 7\% over 2022--2030.
+  \caption[Anti-\textit{extreme-poverty} tax above \$18.15/day in 2030 after 3\% growth.]{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 7\% over 2022--2030.
   }\label{fig:antipoverty_tax_18}
   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
   {../figures/antipoverty_2_tax_18_very_optimistic.pdf}}
 \end{figure}
 
-Figure \ref{fig:antipoverty_tax_18} presents the anti-extreme-poverty tax on incomes above \$18.15/day, in a very optimistic scenario of 7\% growth. The threshold of \$18.15/day per person corresponds to the U.S. federal poverty line for a family of four and represents a more realistic threshold above which taxes could be increased in the Global South. The anti-extreme-poverty tax rates on the ``non-poor'' % non-US-poor?
+Figure \ref{fig:antipoverty_tax_18} presents the anti-\textit{extreme-poverty} tax on incomes above \$18.15/day, in a very optimistic scenario of 7\% growth. The threshold of \$18.15/day per person corresponds to the U.S. federal poverty line for a family of four and represents a more realistic threshold above which taxes could be increased in the Global South. The anti-\textit{extreme-poverty} tax rates on the ``non-poor'' % non-US-poor?
 in this 7\% growth scenario are comparable to the rates on the non-acutely-poor in the baseline scenario. In India, the required tax rate would be 10\% % 9.7\%
 % in the scenario of 7\% growth, and 36\% if growth until 2030 replicates the 2014--2019 trend (5.5\% per year). 
 in the scenario with 7\% growth until 2030, 36\% with 5.5\% growth (the country's 2014--2019 trend), and unachievable (at 156\%) with 3\% growth. %if growth until 2030 replicates the 2014--2019 trend (5.5\% per year). 
@@ -453,7 +460,7 @@ If applied to the global level, the tax of the previous section would bring the 
 
 To close the \textit{extreme} poverty gap, a 1.2\% marginal tax % TODO? rate?
 above 100\$/day (i.e. \$36,500/year) would suffice. %raise revenues equal to the 2030 . 
-Such a tax would result in 3.4\% of global income being transferred from the rich to the extreme poor, but would only involve 0.14\% of global income being transferred from one country to another. 
+Such a tax would result in 0.15\% of global income being transferred from the rich to the extreme poor, most of it (0.14\% of global income) being transferred from one country to another. 
 With contributions of up to 0.4\% of a country's income (in the U.S.), aggregate consumption would increase by more than 10\% in 9 countries. 
 %Low-income countries would receive 3\% of their consumption (and up to 11\% in the D.R.C. or 36\% in Madagascar) 
 % while the U.S. would contribute 0.4\% of its consumption.
@@ -478,6 +485,8 @@ These rates are expressed on top of the current tax system and apply to post-tax
 % Although the idea of an internationally redistributive tax may seem far-fetched, 
 Although internationally redistributive taxes have yet to take off, the proposal of a global wealth tax is gaining momentum \citep{piketty_brief_2022}. A 2\% tax on individual net wealth above \$1 billion would raise \$214 billion a year, slightly more than the global extreme poverty gap \citep{alstadsaeter_global_2024}. Moreover, a global tax on the wealthiest 1\% can raise enough revenues to close the global acute poverty gap and lift everyone above \$6.85/day. For example, the \href{https://wid.world/world-wealth-tax-simulator}{WID wealth tax simulator} shows that a tax consisting of a 4\% marginal rate above \$1 million and 10\% above \$100 million would raise 4.4\% of the global GDP. More generally, a global tax on millionaires designed to be revenue-maximing in the long-run has the potential to finance the eradication of acute poverty. 
 
+While global solidarity has the potential to eradicate poverty, it might prove politically or technically infeasible. Nevertheless, attitudinal surveys and recent technological progress call for a thorough examination of this possibility. Indeed, \cite{fabre_international_2023} show overwhelming support for a global tax on millionaires that would finance low-income countries, reaching 69\% in the U.S. and 84\% in Europe. Meanwhile, progress in payment infrastructures has been encouraging. In particular, the World Bank's \textit{Identification for Development} program finances identification systems in 57 of the world's poorest countries \citep{world_bank_state_2017,world_bank_benin_2020,world_bank_identification_2022}, with the aim of ``providing legal identity for all'' in line with SDG n\textdegree{}16.9. This identification then makes it possible to offer numerous services. In particular, it could be used for cash transfers to the poorest households, a proven method to alleviate poverty \citep{haushofer_short-term_2016,egger_general_2022}. In India, the Aadhaar system has provided a unique biometric identifier for 99\% of the adult population in just 8 years. Aadhaar is linked to bank accounts and already used to distribute social benefits \citep{muralidharan_identity_2023}. In less than two weeks, Togo has set up a mobile money transfer for one million people to compensate for the loss of income suffered by informal workers in confined areas during the COVID pandemic \citep{ipa_togos_2021}. Finally, affordable satellite internet and solar panels are making mobile payments accessible in remote areas. While direct cash transfers are increasingly viewed as a promising way to eradicate poverty, conventional government programs may offer a more reliable path through the deployment public services, social protection, and deployment infrastructures. The latter would not even need to rely on future progress regarding identification and mobile networks.
+
 In a nutshell, whereas poverty alleviation cannot be achieved rapidly without international solidarity, it can be financed by reasonable contributions from the global top 1\%.
 % - One example of global redistribution (incl. largest recipients/contributors)
 % x Inequality indicators BAU / national / global redistr: Table 2
@@ -485,8 +494,8 @@ In a nutshell, whereas poverty alleviation cannot be achieved rapidly without in
 \section{Discussion} 
 
 To paraphrase the \cite{un_sustainable_2022}, ``as things stand, the world is not on track to end poverty by 2030.'' I have shown that the only prospect for low-income countries to eliminate extreme poverty on their own is the combination of strong growth, ambitious policies of social programs and domestic redistribution, and time. 
-With record growth and profound government committment, China has officially eradicated extreme poverty in 2021. The D.R.C. is poorer now than China in 1990, % https://data.worldbank.org/indicator/SI.POV.DDAY?locations=CD-CN-AE, https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.KD?locations=ET-CN-CD
-so even if it reproduces the Chinese miracle, it will not be able to eradicate extreme poverty on its own before 2055. 
+With record growth and profound government committment, China has officially eradicated extreme poverty in 2021. The D.R.C. is poorer today than China was in 1990, % https://data.worldbank.org/indicator/SI.POV.DDAY?locations=CD-CN-AE, https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.KD?locations=ET-CN-CD
+so even if it replicates the Chinese miracle, which is not easy given its institutional capacity, it will not be able to eradicate extreme poverty on its own before 2055. % Not to mention that the Chinese miracle relied on strong institutional capacity, which is often lacking in low-income countries. 
 In contrast, international solidarity might be able to end poverty more quickly and at a much lower welfare cost. In this paper, I have illustrated the magnitude of the required transfer of resources with idealized international taxes, but in reality this could take other forms such as a systemic change in the rules or structures of the world economy. 
 To be fair, this paper only presents the orders of magnitude of global inequality. %Poverty is multidimensional and t
 In practice, structural factors that sustain poverty (like wars or corruption) %, corruption, or deficient administrative capacity). 
@@ -494,6 +503,7 @@ can also hamper the effectiveness of international action. %research can help de
 % TODO! put back
 % While concrete policy proposals have the potential % If... are the way
 % to mobilize international solidarity \citep{fabre_international_2023}, research can help design effective policies to distribute resources to the poorest.
+
 
 % “As things stand, the world is not on track to end poverty by 2030,” (UN, 22)
 % # World Bank (2022): "It became clear that the global goal of ending extreme poverty by 2030 would not be achieved."
@@ -578,28 +588,28 @@ Also, any custom figure can be easily produced using this code.
 % % s_demogrant_7__10
 
 % \begin{figure}[!htb]
-%   \caption[Anti-extreme-poverty tax above \$6.85/day after 3\% growth (HFCE-scaled).]{Linear tax rate above \$6.85/day eradicating extreme poverty (in \%). Data has been rescaled to match HFCE aggregate from national account. In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
+%   \caption[anti-\textit{extreme-poverty} tax above \$6.85/day after 3\% growth (HFCE-scaled).]{Linear tax rate above \$6.85/day eradicating extreme poverty (in \%). Data has been rescaled to match HFCE aggregate from national account. In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
 %   }\label{fig:s_antipoverty_2_tax_7_average}
 %   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
 %   {../figures/s_antipoverty_2_tax_7_average.pdf}}
 % \end{figure}
 
 % \begin{figure}[!htb]
-%   \caption[Anti-extreme-poverty tax above \$6.85/day after predicted growth.]{Linear tax rate above \$6.85/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, with growth until 2030 predicted at the country level. 
+%   \caption[anti-\textit{extreme-poverty} tax above \$6.85/day after predicted growth.]{Linear tax rate above \$6.85/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, with growth until 2030 predicted at the country level. 
 %   }\label{fig:antipoverty_2_tax_7_reg}
 %   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
 %   {../figures/antipoverty_2_tax_7_reg.pdf}}
 % \end{figure}
 
 % \begin{figure}[!htb]
-%   \caption[Anti-extreme-poverty tax above \$18.15/day after 3\% growth.]{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
+%   \caption[anti-\textit{extreme-poverty} tax above \$18.15/day after 3\% growth.]{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
 %   }\label{fig:antipoverty_2_tax_18_average}
 %   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
 %   {../figures/antipoverty_2_tax_18_average.pdf}}
 % \end{figure}
 
 % \begin{figure}[!htb]
-%   \caption[Anti-extreme-poverty tax above \$18.15/day after 7\% growth (HFCE-scaled).]{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). Data has been rescaled to match HFCE aggregate from national account. In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 7\% over 2022--2030. 
+%   \caption[anti-\textit{extreme-poverty} tax above \$18.15/day after 7\% growth (HFCE-scaled).]{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). Data has been rescaled to match HFCE aggregate from national account. In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 7\% over 2022--2030. 
 %   }\label{fig:s_antipoverty_2_tax_18_very_optimistic}
 %   \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
 %   {../figures/s_antipoverty_2_tax_18_very_optimistic.pdf}}
