--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -1089,7 +1089,7 @@
 
 @techreport{world_bank_benin_2020,
   title = {Benin, {{Burkina-Faso}}, {{Togo}} and {{Niger}} - {{Second Phase}} of {{West Africa Unique Identification}} for {{Regional Integration}} and {{Inclusion WURI Project}}.Pdf},
-  author = {World Bank},
+  author = {World Bank, .},
   year = {2020},
   institution = {World Bank},
   url = {https://documents1.worldbank.org/curated/en/261151588384951057/pdf/Benin-Burkina-Faso-Togo-and-Niger-Second-Phase-of-West-Africa-Unique-Identification-for-Regional-Integration-and-Inclusion-WURI-Project.pdf}
@@ -1098,7 +1098,7 @@
 @techreport{world_bank_identification_2022,
   type = {Text/{{HTML}}},
   title = {Identification for {{Development}} ({{ID4D}}) and {{Digitalizing G2P Payments}} ({{G2Px}}) 2022 {{Annual Report}}},
-  author = {World Bank},
+  author = {World Bank, .},
   year = {2022},
   institution = {World Bank},
   url = {https://documents.worldbank.org/en/publication/documents-reports/documentdetail/099437402012317995/IDU00fd54093061a70475b0a3b50dd7e6cdfe147}
